--- a/react-redux-middleware/package.json
+++ b/react-redux-middleware/package.json
@@ -21,5 +21,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "."
+  "homepage": ".",
+  "devDependencies": {}
 }
