--- a/react-redux-crud/reminder/package.json
+++ b/react-redux-crud/reminder/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "js-cookie": "^2.2.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
